# enhanced

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  COPYRIGHT  LICENSE  README.md  ReadMe  ReadMe.md  cmake-config.ps1  cmake-config.sh  xmake.lua
basic/: CMakeLists.txt
basic/include/Enhanced/basic/: export.h  module-info.h
basic/include/Enhanced/basic/collection/: ArrayDeque.h  ArrayList.h  Collection.h  (+8 more)
basic/include/EnhancedBasic/: defines.h  export.h  module-info.h
basic/include/EnhancedBasic/collection/: ArrayDeque.h  ArrayList.h  ArrayList.hpp  ArrayList.tcc  Collection.h  Deque.h  LinkedList.h  LinkedList.hpp  LinkedList.tcc  LinkedQueue.h  List.h  Queue.h  RandomAccess.h  Tuple.h  Vector.h  Vector.hpp  Vector.tcc
basic/include/EnhancedBasic/core/: Any.h  Integer.h  Iterable.h  Iterable.hpp  Iterable.tcc  Iterator.h  String.h
basic/include/EnhancedBasic/generic/: Allocator.h  Allocator.hpp  Allocator.tcc  Any.h  Any.hpp  Any.tcc  AnyArray.h  AnyArray.hpp  AnyArray.tcc  Generic.h
basic/include/EnhancedBasic/generics/: Generics.h
basic/include/EnhancedBasic/math/: LargeInteger.h  Math.h
basic/include/EnhancedBasic/pointer/: SharedPointer.h
basic/include/enhanced/basic/: CharSequence.h  IntegerWrapper.h  Iterable.h  Iterator.h  MutableString.h  String.h  export.h  module-info.h
basic/sources/: CharSequence.cpp  MutableString.cpp  String.c  String.cpp
basic/sources/collection/: ArrayList.cpp  CollectionDefaultConfig.cpp  LinkedList.cpp  RandomAccess.cpp  Vector.cpp
basic/sources/collection/mixed/: MixedArrayList.cpp  MixedLinkedList.cpp
basic/sources/collection/refer/: ReferArrayList.cpp  ReferLinkedList.cpp
basic/sources/collection/referenced/: ReferencedArrayList.cpp  ReferencedLinkedList.cpp
basic/sources/container/: ArrayList.cpp  ContainerConfig.cpp  LinkedList.cpp  Vector.cpp
basic/sources/container/mixed/: MixedArrayList.cpp  MixedLinkedList.cpp
basic/sources/container/refer/: ReferArrayList.cpp  ReferLinkedList.cpp
basic/sources/core/: Integer.c  Integer.cpp  String.c  String.cpp
basic/sources/core/exception/: Exception.c  Exception.cpp
basic/sources/core/pointer/: SharedPointer.cpp
basic/sources/exception/: Exception.c  Exception.cpp
basic/sources/generic/: Allocator.cpp  Any.cpp
basic/sources/math/: LargeInteger.c  LargeInteger.cpp  Math.c  Math.cpp
basic/sources/util/: Allocator.cpp  SharedPointer.cpp
core/: CMakeLists.txt  xmake.lua
core/include/Enhanced/core/: annotations.h  array.h  assert.h  defines.h  export.h  jump.h  memory.h  module-info.h  module.h  process.h  string.h  types.h
core/include/EnhancedCore/: annotations.h  array.h  assert.h  defines.h  export.h  jump.h  memory.h  module-info.h  module.h  process.h  string.h  types.h
core/include/enhanced/: Annotations.h  Array.h  ArrayIterator.h  Assert.h  CharSequence.h  Character.h  Defines.h  ExportCore.h  InitializerList.h  Iterable.h  Iterator.h  Memory.h  MutString.h  Process.h  String.h  TypeInfo.h  Types.h  Warnings.h
core/include/enhanced/collections/: ArrayList.h  CircularQueue.h  Collection.h  Deque.h  LinkedList.h  LinkedQueue.h  List.h  ListStream.h  PriorityQueue.h  Queue.h  RandomAccess.h  Stack.h  Vector.h
core/include/enhanced/core/: ArrayIterator.h  CharSequence.h  InitializerList.h  Iterable.h  Iterator.h  MutString.h  MutableString.h  String.h  TypeInfo.h  annotations.h  array.h  assert.h  charUtil.h  character.h  compatibility.h  defines.h  export.h  generic.h  jump.h  memory.h  module-info.h  module.h  process.h  string.h  stringUtil.h  types.h  wstring.h
core/include/enhanced/exceptions/: AssertionError.h  Error.h  Exception.h  FileNotFoundException.h  IOException.h  IndexOutOfBoundsException.h  InvalidArgumentException.h  InvalidStateException.h  MemoryAllocationError.h  NotImplementedError.h  NullPointerException.h  OperationException.h  RuntimeException.h  UnreachableError.h  UnsupportedOperationException.h
core/include/enhanced/io/: BufferInputStream.h  BufferOutputStream.h  Closeable.h  Display.h  File.h  FileInputStream.h  FileOutputStream.h  FileReader.h  FileWriter.h  Flushable.h  IOStream.h  InputStream.h  OutputStream.h  PrintStream.h  ScanStream.h
core/include/enhanced/math/: BCDLargeInt.h  BcdLargeNumber.h  BinLargeInt.h  BinLargeNumber.h  BitNumber.h  LargeInt.h  LargeNumber.h  Math.h  Number.h
core/include/enhanced/util/: Comparable.h  Function.h  Functional.h  Pair.h  Property.h  SharedPtr.h  Traits.h  Tuple.h
core/sources/: Array.cpp  CharSequence.cpp  Memory.cpp  MutString.cpp  MutableString.cpp  Process.cpp  String.cpp  TypeInfo.cpp  array.c  array.cpp  assert.c  assert.cpp  jump.c  memory.c  memory.cpp  process.c  process.cpp  string.c  string.cpp  stringUtil.c  stringUtil.cpp  wstring.c  wstring.cpp
core/sources/collections/: ArrayList.cpp  Collection.cpp  LinkedList.cpp
core/sources/collections/refer/: ReferArrayList.cpp  ReferLinkedList.cpp
core/sources/exception/: AssertionError.cpp  Error.cpp  Exception.c  Exception.cpp  FileNotFoundException.cpp  IOException.cpp  IndexOutOfBoundsException.cpp  InvalidArgumentException.cpp  MemoryAllocationError.cpp  NotImplementedError.cpp  NullPointerException.cpp  RuntimeException.cpp  UnreachableError.cpp  UnsupportedOperationException.cpp
core/sources/exceptions/: AssertionError.cpp  Error.cpp  Exception.cpp  FileNotFoundException.cpp  IOException.cpp  IndexOutOfBoundsException.cpp  InvalidArgumentException.cpp  InvalidStateException.cpp  MemoryAllocationError.cpp  NotImplementedError.cpp  NullPointerException.cpp  OperationException.cpp  RuntimeException.cpp  UnreachableError.cpp  UnsupportedOperationException.cpp
core/sources/io/: Display.cpp  IOStream.cpp  InputStream.cpp  OutputStream.cpp  PrintStream.cpp  ScanStream.cpp  WarpedInputStream.cpp  WarpedOutputStream.cpp  iosteam.cpp  stdio.cpp
core/sources/math/: BCDLargeInt.cpp  BcdLargeNumber.cpp  LargeInteger.cpp  LargeNumber.cpp  Math.cpp  math.cpp
core/sources/util/: SharedPointer.cpp  SharedPtr.cpp
test/: CMakeLists.txt  test_c.c  test_cpp.cpp
(+344 files in other folders)
